--- a/cheapeats/billigbytur.html
+++ b/cheapeats/billigbytur.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Billig Bytur</title>
+    <meta name="description" content="Råd til at spare på din bytur som studerende">
+    <title>Billig Bytur - studerende, bytur, studerende alkohol, spar som studernede</title>
     <link rel="stylesheet" href="artikelstyle.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
@@ -27,7 +27,7 @@
    </div>
          
    <a href="opskrifter.html">OPSKRIFTER</a>
-   <a href="index.html"><img src="artikelimg/logoartikel.jpg" alt="logo"></a>
+   <a href="index.html"><img src="artikelimg/logoartikel.jpg" alt="cheapeats logo"></a>
    <a href="tømkøleskabet.html">TØM KØLESKABET</a>
    <a href="bookenrådgiver.html">BOOK EN RÅDGIVER</a>
 </header>
@@ -46,7 +46,7 @@
 </p>
 <h3>Har du overskud i budgettet? </h3>
 
- <img id=billedehøjre src="artikelimg/drinks.jpg" alt="planlæg">
+ <img id=billedehøjre src="artikelimg/drinks.jpg" alt="planlægning af madbugdet">
 
 <p>
      Når man lægger et budget, er det vigtigt at være realistisk om sine udgifter og fornøjelser. 
