--- a/cheapeats/billigerehverdag.html
+++ b/cheapeats/billigerehverdag.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Billigere hverdag</title>
+    <meta name="description" content="Hjælp til at sænke dit budget og spare i hverdagen">
+    <title>Billigere hverdag-spare tips studerende, hjælp til at spare, billigere bugdet</title>
     <link rel="stylesheet" href="undersidestyle.css"/>
-    <link rel="stylesheet" href="ekstraunderside_style.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap" rel="stylesheet">
@@ -31,7 +30,7 @@
    </div>
          
    <a href="opskrifter.html">OPSKRIFTER</a>
-   <a href="index.html"><img src="undersideimg/logounderside.jpg" alt="logo"></a>
+   <a href="index.html"><img src="undersideimg/logounderside.jpg" alt="cheapeatslogo"></a>
    <a href="tømkøleskabet.html">TØM KØLESKABET</a>
    <a href="bookenrådgiver.html">BOOK EN RÅDGIVER</a>
 </header>
@@ -56,7 +55,7 @@
    <section>
        <a href="billigbytur.html">
 
-            <img src="artikelimg/drinks.jpg" alt="Her skal være et billede">
+            <img src="artikelimg/drinks.jpg" alt=" Billig bytur">
 
             <div class="skriftkasse">
                 <h1>BILLIGERE BYTUR</h1>
@@ -73,7 +72,7 @@
    <section>
         <a href="tipstiletbilligeremadbudget.html">
 
-            <img src="artikelimg/planlæg.jpg" alt="Her skal være et billede">
+            <img src="artikelimg/planlæg.jpg" alt="spar på madbudget">
 
             <div class="skriftkasse">
                 <h1>BILLIGERE MADBUDGET</h1>
@@ -89,7 +88,7 @@
    <section>
         <a href="#">
 
-            <img src="artikelimg/aktier.jpg" alt="Her skal være et billede">
+            <img src="artikelimg/aktier.jpg" alt="studerende og aktier">
 
             <div class="skriftkasse">
                 <h1>LÆR AT INVESTERE</h1>
@@ -113,7 +112,7 @@
    <section>
        <a href="#">
 
-            <img src="artikelimg/løb.jpg" alt="Her skal være et billede">
+            <img src="artikelimg/løb.jpg" alt="træning i naturen">
 
             <div class="skriftkasse">
                 <h1>ALTERNATIVER TIL SPORTSABONNEMENTER</h1>
@@ -128,7 +127,7 @@
    <section>
         <a href="#">
 
-            <img src="artikelimg/resturant.jpg" alt="Her skal være et billede">
+            <img src="artikelimg/resturant.jpg" alt="billige resturanter">
 
             <div class="skriftkasse">
                 <h1>SPAR MENS DU SPISER UDE</h1>
@@ -142,7 +141,7 @@
    <section>
         <a href="">
 
-            <img src="artikelimg/cykling.jpg" alt="Her skal være et billede">
+            <img src="artikelimg/cykling.jpg" alt="spar på transporten">
 
             <div class="skriftkasse">
                 <h1>SPAR PÅ TRANSPORTEN</h1>
