--- a/cheapeats/bookenrådgiver.html
+++ b/cheapeats/bookenrådgiver.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mere Protein</title>
+    <meta name="description" content="Book en rådgiver - Få professionel hjælp til dit forbrug">
+    <title>Book en rådigver- hjælp til økonomi - økonomisk rådgivning</title>
     <link rel="stylesheet" href="artikelstyle.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
@@ -28,7 +28,7 @@
    </div>
          
    <a href="opskrifter.html">OPSKRIFTER</a>
-   <a href="index.html"><img src="artikelimg/logoartikel.jpg" alt="logo"></a>
+   <a href="index.html"><img src="artikelimg/logoartikel.jpg" alt="cheapeatslogo"></a>
    <a href="tømkøleskabet.html">TØM KØLESKABET</a>
    <a href="bookenrådgiver.html">BOOK EN RÅDGIVER</a>
 </header>
