--- a/cheapeats/index.html
+++ b/cheapeats/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CHEAPEATS - Find artikler og billge, sunde opskrifter</title>
+    <meta name="description" content="CHEAP eats viser sunde opskrifter og vejledende artikler til studerende">
+    <title>CHEAPEATS- billige opskrifter, sunde opskrifter, opskrifter studerende - studerende økonomi, madbugdet</title>
     <link rel="stylesheet" href="forsidestyle.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
@@ -25,7 +25,7 @@
       </div>
       
      <a href="opskrifter.html">OPSKRIFTER</a>
-     <a href="index.html"><img src="forsideimg/logo.jpg" alt="logo"></a>
+     <a href="index.html"><img src="forsideimg/logo.jpg" alt="Cheapeatslogo"></a>
      <a href="tømkøleskabet.html">TØM KØLESKABET</a>
      <a href="bookenrådgiver.html">BOOK EN RÅDGIVER</a>
 </header>
