--- a/cheapeats/nyeste_opskrifter.html
+++ b/cheapeats/nyeste_opskrifter.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nyeste opskrifter</title>
+    <meta name="description" content="Se vores nyeste sunde opskrifter til studerende. ">
+    <title>Nyeste opskrifter-billig mad-international-sundmad-protein-fuldkorn-grøntsager</title>
     <link rel="stylesheet" href="undersidestyle.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
@@ -50,7 +50,7 @@
    <section>
        <a href="#">
 
-             <img src="madimg/afrikansk.jpg" alt="Her skal være et billede">
+             <img src="madimg/afrikansk.jpg" alt="international afrikansk mad">
              <div class="skriftkasse">
             <!-- bruger <br> for at undgå at skulle ændre i generelle regler i stylesheet-->
              <br>
@@ -64,7 +64,7 @@
    <section>
         <a href="#">
 
-            <img src="madimg/brød.jpg" alt="Her skal være et billede">
+            <img src="madimg/brød.jpg" alt="langtidshævet fuldkorns brød med kerner ">
 
             <div class="skriftkasse">
                 <br>
@@ -77,7 +77,7 @@
    <section>
         <a href="#">
 
-            <img src="madimg/udforskasien.jpg" alt="Her skal være et billede">
+            <img src="madimg/udforskasien.jpg" alt="Vietnamesisk pho med grøntsager">
 
             <div class="skriftkasse">
                 <br>
@@ -90,7 +90,7 @@
    <section>
         <a href="#">
 
-            <img src="madimg/fleregrøntsager.jpg" alt="Her skal være et billede">
+            <img src="madimg/fleregrøntsager.jpg" alt=" frisk sommer urte tomat salat">
 
             <div class="skriftkasse">
                 <br>
@@ -111,7 +111,7 @@
    <section>
        <a href="#">
 
-            <img src="madimg/sundfastfood.jpg" alt="Her skal være et billede">
+            <img src="madimg/sundfastfood.jpg" alt="fuldkornsburger med grønkål, chili og oksekød">
 
             <div class="skriftkasse">
                 <br>
@@ -125,7 +125,7 @@
    <section>
         <a href="#">
 
-            <img src="madimg/bagning.jpg" alt="Her skal være et billede">
+            <img src="madimg/bagning.jpg" alt="frokost fuldkornstærte med tomat, spinat, aubergine og æg">
 
             <div class="skriftkasse">
                 <br>
@@ -138,7 +138,7 @@
    <section>
         <a href="#">
 
-            <img src="madimg/vegansk.jpg" alt="Her skal være et billede">
+            <img src="madimg/vegansk.jpg" alt="ovnstegte sødekartofler med tomat kål salat">
 
             <div class="skriftkasse">
                 <br>
@@ -151,7 +151,7 @@
    <section>
         <a href="#">
 
-            <img src="madimg/mereprotein.jpg" alt="Her skal være et billede">
+            <img src="madimg/mereprotein.jpg" alt=" grillet svinekød med bbq og grøntsager">
 
             <div class="skriftkasse">
                 <br>
@@ -170,7 +170,7 @@
        <section>
            <a href="#">
    
-                <img src="proteinimg/grill.jpg" alt="Her skal være et billede">
+                <img src="proteinimg/grill.jpg" alt="grillet kebab med oksekød og grøntsager">
    
                 <div class="skriftkasse">
                     <br>
@@ -184,7 +184,7 @@
        <section>
             <a href="#">
    
-                <img src="proteinimg/sesamekylling.jpg" alt="Her skal være et billede">
+                <img src="proteinimg/sesamekylling.jpg" alt="asiatisk sesam teriaki med tilberedte grøntsager">
    
                 <div class="skriftkasse">
                     <br>
@@ -197,7 +197,7 @@
        <section>
             <a href="#">
    
-                <img src="proteinimg/tofumbroccoli.jpg" alt="Her skal være et billede">
+                <img src="proteinimg/tofumbroccoli.jpg" alt="stegt krydret tofu med krydret broccoli">
    
                 <div class="skriftkasse">
                     <br>
@@ -210,7 +210,7 @@
        <section>
             <a href="#">
    
-                <img src="madimg/mexikansk.jpg" alt="Her skal være et billede">
+                <img src="madimg/mexikansk.jpg" alt=" fuldkorns protein mexikansk burrito med kylling">
    
                 <div class="skriftkasse">
                     <br>
