--- a/cheapeats/omelette.html
+++ b/cheapeats/omelette.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Billig Bytur</title>
+    <meta name="description" content="Lækker proteinholdig omelette">
+    <title>Omelette-proteinholdig-grøntsager-kød-mættende morgenmad</title>
     <link rel="stylesheet" href="artikelstyle.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
@@ -27,7 +27,7 @@
    </div>
          
    <a href="opskrifter.html">OPSKRIFTER</a>
-   <a href="index.html"><img src="artikelimg/logoartikel.jpg" alt="logo"></a>
+   <a href="index.html"><img src="artikelimg/logoartikel.jpg" alt="cheapeatslogo"></a>
    <a href="tømkøleskabet.html">TØM KØLESKABET</a>
    <a href="bookenrådgiver.html">BOOK EN RÅDGIVER</a>
 </header>
@@ -50,7 +50,7 @@
     INGREDIENSER
 </h3>
 
-<img id= billedehøjre src="proteinimg/omelette.jpg" alt="billede af omelette">
+<img id= billedehøjre src="proteinimg/omelette.jpg" alt="Omelette med peberfrugt,skinke,løg">
 
 <ul>
 <li>
