--- a/cheapeats/proteinburrito.html
+++ b/cheapeats/proteinburrito.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Billig Bytur</title>
+    <meta name="description" content="Lækker, krydret proteinholdig kylling burrito">
+    <title>Protein burrito - protein opskrifter- sunde opskrifter</title>
     <link rel="stylesheet" href="artikelstyle.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
@@ -51,7 +51,7 @@
         INGREDIENSER
     </h3>
 
-<img id=billedehøjre src="madimg/mexikansk.jpg" alt="billede af burrito">
+<img id=billedehøjre src="madimg/mexikansk.jpg" alt="Kylling krydret burrito">
 
 <ul>
 <li>
