--- a/cheapeats/proteinpandekager.html
+++ b/cheapeats/proteinpandekager.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Billig Bytur</title>
+    <title>Protein pandekager- protein opskrifter- bananpandekager-havrepandekager</title>
     <link rel="stylesheet" href="artikelstyle.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
@@ -27,7 +27,7 @@
    </div>
          
    <a href="opskrifter.html">OPSKRIFTER</a>
-   <a href="index.html"><img src="artikelimg/logoartikel.jpg" alt="logo"></a>
+   <a href="index.html"><img src="artikelimg/logoartikel.jpg" alt="cheapeatslogo"></a>
    <a href="tømkøleskabet.html">TØM KØLESKABET</a>
    <a href="bookenrådgiver.html">BOOK EN RÅDGIVER</a>
 </header>
@@ -49,7 +49,7 @@
     <h3>
         INGREDIENSER
     </h3>
-<img id="billedehøjre" src="proteinimg/pandekager.jpg" alt="billede af burrito">
+<img id="billedehøjre" src="proteinimg/pandekager.jpg" alt="sunde fuldkorns proteinholdige pandekager">
 <ul>
 <li>
     4 Æg
