--- a/cheapeats/spisplantebaseretprotein.html
+++ b/cheapeats/spisplantebaseretprotein.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>protein</title>
+    <meta name="description" content=" Få rådgivning og eksempler på billige plantebaseret proteiner">
+    <title>Plantebaseret protein, vegansk protein, vegetar protein</title>
     <link rel="stylesheet" href="artikelstyle.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
@@ -28,7 +28,7 @@
        </div>
              
        <a href="opskrifter.html">OPSKRIFTER</a>
-       <a href="index.html"><img src="artikelimg/logoartikel.jpg" alt="logo"></a>
+       <a href="index.html"><img src="artikelimg/logoartikel.jpg" alt="cheapeatslogo"></a>
        <a href="tømkøleskabet.html">TØM KØLESKABET</a>
        <a href="bookenrådgiver.html">BOOK EN RÅDGIVER</a>
     </header>
@@ -46,7 +46,7 @@
    <h3>
          HVORFOR SPISE MERE PROTEIN?
    </h3>
-   <img id=billedehøjre src="artikelimg/proteinerudenkød.jpg" alt="">
+   <img id=billedehøjre src="artikelimg/proteinerudenkød.jpg" alt=" saltede stegte edemammebønner">
 
    <p>
     Proteiner er en af de vigtigste næringsstoffer vi har i kroppen,
