--- a/cheapeats/sunderehverdag.html
+++ b/cheapeats/sunderehverdag.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sundere hverdag</title>
+    <meta name="description" content=" Læs om forskellige råd til at få en sundere hverdag.">
+    <title>Sundere hverdag- motion, spis sundt, sund kost</title>
     <link rel="stylesheet" href="undersidestyle.css"/>
-    <link rel="stylesheet" href="ekstraunderside_style.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap" rel="stylesheet">
@@ -55,7 +54,7 @@
    <section>
        <a href="spisplantebaseretprotein.html">
 
-            <img src="artikelimg/proteinerudenkød.jpg" alt="Her skal være et billede">
+            <img src="artikelimg/proteinerudenkød.jpg" alt="edemammebønner med salt">
 
             <div class="skriftkasse">
                 <h1>ØG DIT PROTEIN INDHOLD UDEN KØD</h1>
@@ -72,13 +71,13 @@
    <section>
         <a href="#">
 
-            <img src="artikelimg/fordelevedatspisenødder.jpg" alt="Her skal være et billede">
+            <img src="artikelimg/fordelevedatspisenødder.jpg" alt="forskellige nødder, nøddeolie, protein">
 
             <div class="skriftkasse">
-                <h1>GRØNTSAGER</h1>
+                <h1>Fordele ved at spise nødder</h1>
                 <hr>
                 <h2>
-                   Opskrifter til dig der ønsker at spise flere grøntsager
+                   Læs om de forskellige nødders fordele.
                 </h2>
                 <h3> Af redaktionen</h3>
             </div>
@@ -88,12 +87,12 @@
    <section>
         <a href="#">
 
-            <img src="artikelimg/fordelingafprotein:kulhydrat:grøntsager.jpg" alt="Her skal være et billede">
+            <img src="artikelimg/fordelingafprotein:kulhydrat:grøntsager.jpg" alt="Sund, jævn fordeling af mad">
 
             <div class="skriftkasse">
-                <h1>FULDKORN</h1>
+                <h1>Fordeling af proteiner, kulhydrater og grøntsager</h1>
                 <hr>
-               <h2> Opskrifter til dig der ønsker at spise mere fuldkorn</h2>
+               <h2> Hjælp til hvordan du får et nærende måltid</h2>
                <h3> Af redaktionen</h3>
             </div>  
        </a>
@@ -112,12 +111,12 @@
    <section>
        <a href="#">
 
-            <img src="artikelimg/ideertilsundmorgenmad.jpg" alt="Her skal være et billede">
+            <img src="artikelimg/ideertilsundmorgenmad.jpg" alt="fuldkorn, mælkeprodukter, sukkerfri morgenmad">
 
             <div class="skriftkasse">
-                <h1>VEGANSK</h1>
+                <h1>Tips til en sund morgenmad</h1>
                 <hr>
-                <h2>Opskrifter til dig der ønsker at spise vegansk</h2>
+                <h2>Hjælp til dig der ønsker en sundere morgenmad</h2>
                 <h3> Af redaktionen</h3>
             </div>
        </a>
@@ -127,12 +126,12 @@
    <section>
         <a href="#">
 
-            <img src="artikelimg/mealprepping.jpg" alt="Her skal være et billede">
+            <img src="artikelimg/mealprepping.jpg" alt="madlavning til flere dage">
 
             <div class="skriftkasse">
-                <h1>SUND FASTFOOD</h1>
+                <h1>Meal prepping</h1>
                 <hr>
-                <h2>Opskrifter til dig der vil have et sundt alternativ</h2>
+                <h2>Hjælp til dig der savner overskud til madlavning</h2>
                 <h3> Af redaktionen</h3>
             </div>
         </a>
@@ -141,12 +140,12 @@
    <section>
         <a href="#">
 
-            <img src="artikelimg/sniggrøntsageridinmad.jpg" alt="Her skal være et billede">
+            <img src="artikelimg/sniggrøntsageridinmad.jpg" alt="flere grøntsager">
 
             <div class="skriftkasse">
-                <h1>SUNDE SØDE SNACKS</h1>
+                <h1>Snig grøntsager i maden</h1>
                 <hr>
-                <h2> Opskrifter til dig der vil have et sundt alternativ til den søde tand</h2>
+                <h2> Hjælp til dig der ikke er fan af grøntsager</h2>
                 <h3> Af redaktionen</h3>
             </div>
        </a>
