--- a/cheapeats/tipstiletbilligeremadbudget.html
+++ b/cheapeats/tipstiletbilligeremadbudget.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Billigere madbudget</title>
+    <meta name="description" content=" Få hjælp til hvordand du sænker dit madbudget">
+    <title>Billigere madbudget- spar på mad- billige opskrifter</title>
     <link rel="stylesheet" href="artikelstyle.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
@@ -27,7 +27,7 @@
    </div>
          
    <a href="opskrifter.html">OPSKRIFTER</a>
-   <a href="index.html"><img src="artikelimg/logoartikel.jpg" alt="logo"></a>
+   <a href="index.html"><img src="artikelimg/logoartikel.jpg" alt="cheapeatslogo"></a>
    <a href="tømkøleskabet.html">TØM KØLESKABET</a>
    <a href="bookenrådgiver.html">BOOK EN RÅDGIVER</a>
 </header>
@@ -42,11 +42,11 @@
      Hvis man har mistet overblik over sit forbrug og ikke føler at man har nogle penge i slutningen af måneden, 
      kan det være smart at undersøge sit madbudget først. Her er 7 tips til at sænke dit madbudget. 
 </p>
-<img id=billedehøjre src="artikelimg/planlæg.jpg" alt="planlæg">
-
 <h3>
      FÅ ET OVERBLIK 
 </h3>
+<img id=billedehøjre src="artikelimg/planlæg.jpg" alt="planlægning af madbugdet">
+
 <p>
       Prøv at gå igennem din netbank og kategoriser alle dine udgifter på mad du har haft den seneste måned.
      Kategoriser udgifterne i fx:   
@@ -95,7 +95,7 @@
      og samtidigt lave en indkøbsliste til de ting du mangler for at opfylde listen.
      Herunder kan man se et eksempel på en madplan: 
 </p>
-<img id="madplan" src=" artikelimg/madplan.jpg" alt="madplan">
+<img id="madplan" src=" artikelimg/madplan.jpg" alt="eksempel på madplan">
 
 <h3>
     STRUKTURERET INDKØBSTURE
@@ -107,11 +107,13 @@
       derved er det også nemmere at holde styr på sit madbudget.  
 </p>
 
-<img id=billedehøjre src="artikelimg/mealprepping.jpg" alt="mealprepping">
-
 <h3>
-      MEAL PREP
+     MEAL PREP
 </h3>
+
+<img id=billedehøjre src="artikelimg/mealprepping.jpg" alt="eksempel på mealprepping">
+
+
 <p>
        Man kan enten lave lækre og næringsrige madpakker til flere dage, 
        lave en stor portion aftensmad,
