--- a/cheapeats/tømkøleskabet.html
+++ b/cheapeats/tømkøleskabet.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mere Protein</title>
+    <meta name="description" content="Få hjælp til hvad du skal lave til aftensmad ud fra de produkter du har i køleskabet.">
+    <title>Tøm Køleskabet- undgå at handle, opskrifter med rester, madspild</title>
     <link rel="stylesheet" href="artikelstyle.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
