--- a/cheapeats/billigbytur.html
+++ b/cheapeats/billigbytur.html
@@ -118,7 +118,7 @@ og man får det bedre dagen efter.
 
 <!--FOOTER-->
 <footer>
-    <a href="#">Sociale medier</a>
+    <a href="socialemedier.html">Sociale medier</a>
     <a href="#">App</a>
     <a href="#">Om os</a>
     <a href="#">Kontakt os</a>
