--- a/cheapeats/bookenrådgiver.html
+++ b/cheapeats/bookenrådgiver.html
@@ -39,7 +39,7 @@
 
 <!--FOOTER-->
 <footer>
-    <a href="#">Sociale medier</a>
+    <a href="socialemedier.html">Sociale medier</a>
     <a href="#">App</a>
     <a href="#">Om os</a>
     <a href="#">Kontakt os</a>
