--- a/cheapeats/spisplantebaseretprotein.html
+++ b/cheapeats/spisplantebaseretprotein.html
@@ -128,7 +128,7 @@ Havreklid: 17g protein pr 100g
 Vilde ris: 4g protein pr 100g 
 </li>
 </ul>
-
+<a href="protein.html"> Hvis du har brug for inspiration til opskrifter med disse produkter kan du trykke her</a>
 <p>
       Disse produkter har også mange andre sunde dele i sig udover proteinerne.
       Nogle har stort jernindhold, kostfibre, C- vitamin, mineraler og andre vitaminer.
@@ -141,7 +141,7 @@ Vilde ris: 4g protein pr 100g
 
 <!--FOOTER-->
 <footer>
-    <a href="#">Sociale medier</a>
+    <a href="socialemedier.html">Sociale medier</a>
     <a href="#">App</a>
     <a href="#">Om os</a>
     <a href="#">Kontakt os</a>
