--- a/cheapeats/tipstiletbilligeremadbudget.html
+++ b/cheapeats/tipstiletbilligeremadbudget.html
@@ -164,14 +164,17 @@
 </h3>
 
 <p>
-     Denne siger sig selv, men hvis man har en vane med at købe mad i kantinen eller spise ude med veninderne, er dette en kæmpe ændring i sit madbudget.  Hvis du ofte bruger mange penge på mad sammen med dine venner og ikke ønsker at føle dig udenfor, kan du eventuel foreslå at starte en madklub, tage på picnic, eller lave noget kulturelt i stedet, hvor man har en madpakke med.  
+     Denne siger sig selv, men hvis man har en vane med at købe mad i kantinen eller spise ude med veninderne, er dette en kæmpe ændring i sit madbudget.  Hvis du ofte bruger mange penge på mad sammen med dine venner og ikke ønsker at føle dig udenfor, kan du eventuel foreslå at starte en madklub, 
+     tage på picnic, eller lave noget kulturelt i stedet, hvor man har en madpakke med.  
 </p>
+
+<a href="opskrifter.html"> Hvis du har brug for indspiration til opskrifter kan du trykke her</a> 
 </main>
 
 
 <!--FOOTER-->
 <footer>
-    <a href="#">Sociale medier</a>
+    <a href="socialemedier.html">Sociale medier</a>
     <a href="#">App</a>
     <a href="#">Om os</a>
     <a href="#">Kontakt os</a>
